--- a/src/styles/_dictionary.component.scss
+++ b/src/styles/_dictionary.component.scss
@@ -214,7 +214,7 @@
                 display: flex;
                 width: 100%;
                 position: relative;
-                top: -7px;
+                top: -3px;
             }
 
             .config-btn {
