--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -83,6 +83,21 @@
     }
 }
 
+.highlighted {
+    background: $highlight-color-main-theme;
+    color: $secondary-font-color-main-theme;
+}
+
+.unimportant-text {
+    color: $unimportant-info-color-main-theme;
+}
+
+.modal-block {
+    background: $modal-block-background-main-theme;
+    color: $secondary-font-color-main-theme;
+    border-color: $border-color-main-theme;
+}
+
 .tooltip {
     opacity: 1 !important;
 
@@ -212,10 +227,6 @@
         color: $secondary-font-color-main-theme;
     }
 
-    .unimportant-text {
-        color: $unimportant-info-color-main-theme;
-    }
-
     .active {
         border-color: $button-color-main-theme;
         color: $button-color-main-theme;
@@ -243,11 +254,6 @@
 
     .deleted {
         color: $disabled-color-main-theme;
-    }
-
-    .highlighted {
-        background: $highlight-color-main-theme;
-        color: $secondary-font-color-main-theme;
     }
 
     // main-layout
