--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -27,6 +27,7 @@ $invalid-color-main-theme: #f44336;
 $invalid-color-hover-main-theme: #d32f2f;
 $valid-color-main-theme: #8bc34a;
 $valid-color-hover-main-theme: #689f38;
+$modal-block-background-main-theme: #fafafa;
 
 $header-element-height: 49px;
 $desktop-link-size: 150px;
